# avi-rs

./: Cargo.toml  LICENSE  README.md
src/: bytes.rs  fourcc.rs  lib.rs  mmreg.rs  riff.rs
tests/: bytes.rs  read.rs  riff.rs
