[package]
name = "avi-rs"
version = "0.1.0"
authors = ["exellian <gabler.max@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dev-dependencies.tokio]
version = "0.3"
features = ["full"]

[dependencies.tokio]
version = "0.3"
features = ["io-util"]